[gd_scene load_steps=6 format=3 uid="uid://djktntsm8n3v3"]

[ext_resource type="Script" path="res://Scripts/restart_menu.gd" id="1_gumvl"]
[ext_resource type="Theme" uid="uid://deqou0uy8dcse" path="res://UI/Buttons/button_basic.tres" id="2_t5dlp"]
[ext_resource type="PackedScene" uid="uid://bq05puxycrtd" path="res://Scenes/Menu/menu_background.tscn" id="2_wsndf"]
[ext_resource type="Theme" uid="uid://duictke4swjwo" path="res://UI/CharacterDialog/dialog_box.tres" id="3_amewr"]
[ext_resource type="Theme" uid="uid://2o0neax1nafo" path="res://UI/Menu/text_panel.tres" id="4_riomr"]

[node name="RestartMenu" type="Node2D"]
script = ExtResource("1_gumvl")

[node name="MenuBackground" parent="." instance=ExtResource("2_wsndf")]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RestartButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 676.0
offset_top = 100.0
offset_right = 976.0
offset_bottom = 175.0
theme = ExtResource("2_t5dlp")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MainMenuButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 676.0
offset_top = 250.0
offset_right = 976.0
offset_bottom = 325.0
theme = ExtResource("2_t5dlp")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 676.0
offset_top = 400.0
offset_right = 976.0
offset_bottom = 475.0
theme = ExtResource("2_t5dlp")
theme_override_font_sizes/font_size = 32
text = "Quit to Desktop"

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 100.0
offset_right = 535.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_riomr")

[node name="GameOverLabel" type="RichTextLabel" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 810.0
grow_horizontal = 2
rotation = 0.0035772
theme = ExtResource("3_amewr")
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "You have lost the throne, 1234567890123456.
Try again in 10 years"

[connection signal="pressed" from="Control/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_exit_button_pressed"]
